--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zarazwesele.pl</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/valentine-day.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -36,7 +37,7 @@
       <!-- HERO -->
       <section class="hero-container">
         <div class="hero-slider">
-          <img src="images/hero/1.jpg.jpg" alt="Fotobudka" />
+          <img id="hero-img" src="images/hero/1.jpg.jpg" alt="Fotobudka" />
         </div>
         <h2 class="hero-text">Twoje wesele jest dla nas <span class="hero-text-span">najważniejsze</span></h2>
         <!-- NAVIGATION SLIDER PANEL -->
