--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- TO DO: -->
+<!-- 1. Skrótsze i bardziej intuicyjne nazewnictwo klas.
+2. Po każdym komponencie RWD. Czy taka kolejność jest praktyczna? komponent plus css plus rwd.
+3. Cień wewnętrzny, ładny logo.
+4. Może bardziej urozmaicony header. 
+5. ładne ikonki dopasować. -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
