--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/valentine-day.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
     <script src="https://kit.fontawesome.com/aacfed8f05.js" crossorigin="anonymous"></script>
   </head>
