--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
     <script src="https://kit.fontawesome.com/aacfed8f05.js" crossorigin="anonymous"></script>
   </head>
@@ -45,19 +48,21 @@
         <div class="hero-slider">
           <img id="hero-img" src="images/hero/1.jpg.jpg" alt="Fotobudka" />
         </div>
-        <h2 class="hero-text">Twoje wesele jest dla nas <span class="hero-text-span">najważniejsze</span></h2>
+        <div class="hero-text-box">
+          <h2 class="hero-text">Twoje wesele jest dla nas najważniejsze!</h2>
+        </div>
         <!-- NAVIGATION SLIDER PANEL -->
         <div class="hero-slider-panel">
           <h3 class="hero-slider-panel__heading">Nasze projekty</h3>
           <p class="hero-slider-panel__location">Miejsce 1 Miejsce 1 Miejsce 1</p>
           <div class="hero-slider-panel__navigation">
             <div class="hero-slider-panel__back-box">
-              <span class="back-arrow-icon"><i class="fa-solid fa-arrow-left"></i></span>
-              <p class="hero-slider-panel__back-text">Poprzedni</p>
+              <span class="back-arrow-icon arrow-icon"><i class="fa-solid fa-arrow-left"></i></span>
+              <p class="hero-slider-panel__navigation-text">Poprzedni</p>
             </div>
             <div class="hero-slider-panel__next-box">
-              <span class="next-arrow-icon"><i class="fa-sharp fa-solid fa-arrow-right"></i></span>
-              <p class="hero-slider-panel__next-text">Następny</p>
+              <p class="hero-slider-panel__navigation-text">Następny</p>
+              <span class="next-arrow-icon arrow-icon"><i class="fa-sharp fa-solid fa-arrow-right"></i></span>
             </div>
           </div>
         </div>
