--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- HERO -->
       <section class="hero-container">
         <div class="hero-slider">
-          <img id="hero-img" src="images/hero/1.jpg.jpg" alt="Fotobudka" />
+          <img id="hero-img" src="images/hero/1.jpg" alt="Fotobudka" />
         </div>
         <div class="hero-text-box">
           <h2 class="hero-text">Twoje wesele jest dla nas najważniejsze!</h2>
@@ -58,10 +58,10 @@
           <div class="hero-slider-panel__navigation">
             <div class="hero-slider-panel__back-box">
               <span class="back-arrow-icon arrow-icon"><i class="fa-solid fa-arrow-left"></i></span>
-              <p class="hero-slider-panel__navigation-text">Poprzedni</p>
+              <p class="hero-slider-panel__navigation-text-back">Poprzedni</p>
             </div>
             <div class="hero-slider-panel__next-box">
-              <p class="hero-slider-panel__navigation-text">Następny</p>
+              <p class="hero-slider-panel__navigation-text-next">Następny</p>
               <span class="next-arrow-icon arrow-icon"><i class="fa-sharp fa-solid fa-arrow-right"></i></span>
             </div>
           </div>
@@ -137,5 +137,6 @@
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
