--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       <!-- HERO -->
       <section class="hero-container">
         <div class="hero-slider">
-          <img id="hero-img" src="images/hero/1.jpg" alt="Fotobudka" />
+          <img class="hero-img1 active" src="images/hero/1.jpg" alt="Fotobudka" />
+          <img class="hero-img2 inactive" src="/images/Hero/3.jpg" alt="" />
         </div>
         <div class="hero-text-box">
           <h2 class="hero-text">Twoje wesele jest dla nas najważniejsze!</h2>
