Slider i obsługa napisów

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       <!-- HERO -->
       <section class="hero-container">
         <div class="hero-slider">
-          <img class="hero-img1 active" src="images/hero/1.jpg" alt="Fotobudka" />
-          <img class="hero-img2 inactive" src="/images/Hero/3.jpg" alt="" />
+          <img class="hero-img slide-first" src="images/hero/1.jpg" alt="Fotobudka" />
+          <img class="hero-img slide-middle hidden" src="/images/Hero/2.jpg" alt="Fotobudka" />
+          <img class="hero-img slide-last hidden" src="/images/Hero/3.webp" alt="Fotobudka" />
         </div>
         <div class="hero-text-box">
           <h2 class="hero-text">Twoje wesele jest dla nas najważniejsze!</h2>
@@ -55,7 +56,7 @@
         <!-- NAVIGATION SLIDER PANEL -->
         <div class="hero-slider-panel">
           <h3 class="hero-slider-panel__heading">Nasze projekty</h3>
-          <p class="hero-slider-panel__location">Miejsce 1 Miejsce 1 Miejsce 1</p>
+          <p class="hero-slider-panel__location">Projekt w miejscu 1</p>
           <div class="hero-slider-panel__navigation">
             <div class="hero-slider-panel__back-box">
               <span class="back-arrow-icon arrow-icon"><i class="fa-solid fa-arrow-left"></i></span>
