--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 3. Cień wewnętrzny, ładny logo.
 4. Może bardziej urozmaicony header. 
 5. ładne ikonki dopasować. -->
+<!-- 6. Ciężko mi dopasować object-fit i kontener do slajdera -->
+<!-- 7. Nav-mobile do zrobienia -->
+<!-- 8. Poprawić jeden link do fontów -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -40,7 +43,17 @@
           <li class="nav-desktop__link contact-link"><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <span class="hamburger-icon"><i class="fa-solid fa-bars"></i></span>
+      <span class="hamburger-icon"><i class="fa-solid fa-bars hamburger"></i></span>
+      <!-- NAV MOBILE -->
+      <nav class="nav-mobile">
+        <ul class="nav-mobile__links">
+          <li class="nav-mobile__link"><a href="#">O nas</a></li>
+          <li class="nav-mobile__link"><a href="#">Oferta</a></li>
+          <li class="nav-mobile__link"><a href="#">Usługi</a></li>
+          <li class="nav-mobile__link contact-link"><a href="#">Kontakt</a></li>
+        </ul>
+        <span class="close-icon"><i class="fa-solid fa-xmark close"></i></span>
+      </nav>
     </header>
     <main>
       <!-- HERO -->
