--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 4. Może bardziej urozmaicony header. 
 5. ładne ikonki dopasować. -->
 <!-- 6. Ciężko mi dopasować object-fit i kontener do slajdera -->
-<!-- 7. Nav-mobile do zrobienia -->
-<!-- 8. Poprawić jeden link do fontów -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,10 +15,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/valentine-day.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
     <script src="https://kit.fontawesome.com/aacfed8f05.js" crossorigin="anonymous"></script>
   </head>
