--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             <p class="reputation-adventage__description">Lorem ipsum dolor sit amet consectetur adipisici enim laboriosam earum cupiditate.</p>
           </article>
           <article class="reputation-adventage-box">
-            <span class="reputation-adventage__icon"><i class="fa-solid fa-aperture"></i></span>
+            <span class="reputation-adventage__icon"><i class="fa-solid fa-ranking-star"></i></span>
             <h2 class="reputation-adventage__heading">Najlepsze projekty</h2>
             <p class="reputation-adventage__description">Lorem ipsum dolor sit amet consectetur adipisici enim laboriosam earum cupiditate.</p>
           </article>
         </div>
       </section>
       <!-- ABOUT -->
-      <section class="about-container">
+      <!-- <section class="about-container">
         <div class="about-img">
           <img src="images/mloda-para-scaled.webp" alt="O nas" />
         </div>
@@ -116,8 +116,8 @@
           <a class="btn more-history-btn" href="#">Więcej w naszej Historii</a>
         </div>
       </section>
-      <!-- SERVICES -->
-      <section class="services-container">
+      SERVICES -->
+      <!-- <section class="services-container">
         <h2 class="services-heading">Usługi</h2>
         <div class="services-grid-box">
           <div class="service">
@@ -145,7 +145,7 @@
             <h3 class="service-name">Fotobudka</h3>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <script src="script.js"></script>
   </body>
