--- a/index.html
+++ b/index.html
@@ -99,24 +99,18 @@
         </div>
       </section>
       <!-- ABOUT -->
-      <!-- <section class="about-container">
+      <section class="about-container">
         <div class="about-img">
           <img src="images/mloda-para-scaled.webp" alt="O nas" />
         </div>
         <div class="about-us-box">
           <h2 class="about-us__heading">O nas</h2>
-          <p class="about-us__paragraph">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias repudiandae pariatur provident similique consectetur mollitia id, vero unde porro doloremque ipsa vel quisquam laboriosam
-            numquam quam consequatur consequuntur? Dolor, necessitatibus.
-          </p>
-          <p class="about-us__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, minima est fuga porro sit, vero esse enim delectus consequuntur optio labore perferendis quibusdam, dignissimos dolore
-            dolorem inventore cupiditate excepturi corporis.
-          </p>
-          <a class="btn more-history-btn" href="#">Więcej w naszej Historii</a>
+          <p class="about-us__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias repudiandae pariatur provident similique cons</p>
+          <p class="about-us__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, minima est fuga porro sit, vero esse enim</p>
+          <a class="more-history-btn" href="#">Więcej w naszej Historii</a>
         </div>
       </section>
-      SERVICES -->
+
       <!-- <section class="services-container">
         <h2 class="services-heading">Usługi</h2>
         <div class="services-grid-box">
